Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22483

Assert when trying to use QGLWidget() as background for QGraphicsView on Intel Atom running Windows 7

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.1
    • 4.7.4
    • GUI: OpenGL
    • None
    • Windows 7, Intel 1.8.1 EMGD driver, Intel Atom E680 processor, Kontron nano-TT board
    • f13d0078d9f829cde2cd5b8b9eac40635a883ec6

      Assert from qpaintengineex_opengl2.cpp (in function: bool QGL2PaintEngineEx::begin(QPaintDevice *pdev)) on checking the capabilities/features of opengl driver (this section of code: #if !defined(QT_OPENGL_ES_2)
      bool success = qt_resolve_version_2_0_functions(d->ctx)
      && qt_resolve_buffer_extensions(d->ctx);
      Q_ASSERT(success); <-this is the assert
      Q_UNUSED(success);
      #endif
      when using the QGLWidget() as the background in a QGraphicsView widget. Intel driver claims it is OpenGL 2.0 compatible, Qt documentation claims the same. Not sure who's right.

      Forcing the paint engine to OpenGL 1.1 causes unbearable artifacts in image.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rodal Samuel Rødal
            benebeck ben beckwith
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes