src/opengl/gl2paintengineex/qtextureglyphcache_gl_p.h
@@ -56,6 +56,7 @@
 #include <private/qtextureglyphcache_p.h>
 #include <private/qgl_p.h>
 #include <qglshaderprogram.h>
+#include <qglframebufferobject.h>
 
 // #define QT_GL_TEXTURE_GLYPH_CACHE_DEBUG
 
@@ -66,10 +67,11 @@ class QGL2PaintEngineExPrivate;
 struct QGLGlyphTexture
 {
     QGLGlyphTexture(const QGLContext *ctx)
-        : m_width(0)
+        : m_fbo(0)
+        , m_width(0)
         , m_height(0)
     {
-        if (ctx && !ctx->d_ptr->workaround_brokenFBOReadBack)
+        if (ctx && QGLFramebufferObject::hasOpenGLFramebufferObjects() && !ctx->d_ptr->workaround_brokenFBOReadBack)
             glGenFramebuffers(1, &m_fbo);
 
 #ifdef QT_GL_TEXTURE_GLYPH_CACHE_DEBUG
@@ -85,7 +87,7 @@ struct QGLGlyphTexture
         // At this point, the context group is made current, so it's safe to
         // release resources without a makeCurrent() call
         if (ctx) {
-            if (!ctx->d_ptr->workaround_brokenFBOReadBack)
+            if (m_fbo)
                 glDeleteFramebuffers(1, &m_fbo);
             if (m_width || m_height)
                 glDeleteTextures(1, &m_texture);
